package imhotep.shardmanager;

option java_package = "com.indeed.imhotep.shardmanager.protobuf";
option java_outer_classname = "ImhotepShardManagerProtos";
option java_multiple_files = true;

message AssignedShard {
  required string dataset = 1;
  required string shard_id = 2;
  required uint64 version = 3;
}

message ShardManagerResponse {
  enum ResponseCode {
    OK = 1;
    ERROR = 2;
  }

  optional ResponseCode response_code = 1 [default = OK];
  // in case for ERROR
  optional string error_message = 2;
  // for GET_ASSIGNMENT
  repeated AssignedShard assigned_shards = 3;
}

message HostAndPort {
  optional string host = 1;
  optional int32 port = 2;
}

message ShardManagerRequest {
  enum RequestType {
    GET_ASSIGNMENT = 1;
  }

  required RequestType request_type = 1;
  required HostAndPort node = 2;
}